--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -1,3 +1,13 @@
 @import 'twitter/bootstrap';
 @import '_navbar';
 @import '_footer';
+
+.share-dollars {
+  margin-left: 10px;
+}
+
+#transactions {
+  .btn {
+    margin-right: 10px;
+  }
+}
