--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -18,6 +18,7 @@ html
                 li= link_to 'add', new_period_transaction_path(controller.current_period)
                 li= link_to 'history', periods_path
                 li= link_to 'accounts', accounts_path
+                li= link_to 'help', "/help"
               /ul.nav.pull-right
               /  - if current_user
               /    li.dropdown
