fix specs, update readme

--- a/app/views/pages/root.html.slim
+++ b/app/views/pages/root.html.slim
@@ -2,6 +2,9 @@
   h1 De Haro
   br
 
+  h3 Periods
+  p Each expense is entered as part of a period. There is only one active period at any given time, and you can view it by clicking the "current" link at the top of the page. Each period has a starting balance and an ending balance for each account. When a period is closed, the current balance for each account is saved as the starting balance for the period, and cannot be changed. Each account's oweage is calculated based on the starting balance and all transactions in that period.
+
   h3 Balances
   ul
     li
@@ -33,6 +36,3 @@
 
   h3 Paying Rent
   p To pay rent as a resident, select the name of the resident and set False Profit's shares to 1 (or click the "Pay Rent" button to enter the shares automatically)
-
-  h3 Periods
-  p Each expense is entered as part of a period. There is only one active period at any given time, and you can view it by clicking the "current" link at the top of the page. Each period has a starting balance and an ending balance for each account. When a period is closed, the balance for each account is saved as the starting balance for the period, and cannot be changed. Each account's oweage is calculated based on the starting balance and all transactions in that period.
