clarify starting/closing balances in help page

--- a/app/views/pages/root.html.slim
+++ b/app/views/pages/root.html.slim
@@ -3,7 +3,7 @@
   br
 
   h3 Periods
-  p Each expense is entered as part of a period. There is only one active period at any given time, and you can view it by clicking the "current" link at the top of the page. Each period has a starting balance and an ending balance for each account. When a period is closed, the current balance for each account is saved as the starting balance for the period, and cannot be changed. Each account's oweage is calculated based on the starting balance and all transactions in that period.
+  p Each expense is entered as part of a period. There is only one active period at any given time, and you can view it by clicking the "current" link at the top of the page. Each period has a starting balance and an ending balance for each account. When a period is closed, the current balance for each account is saved as the closing balance for that period, and as the starting balance for the next period. Each account's oweage is calculated based on the starting balance and all transactions in that period.
 
   h3 Balances
   ul
