add feature specs

--- a/app/views/accounts/_form.html.slim
+++ b/app/views/accounts/_form.html.slim
@@ -1,6 +1,6 @@
 = form_for @account, html: { class: 'form-horizontal' } do |f|
   .control-group
-    label.control-label Name
+    label.control-label for="account_name" Name
     .controls
       = f.text_field :name
 
