--- a/app/views/periods/show.html.slim
+++ b/app/views/periods/show.html.slim
@@ -1,6 +1,6 @@
 h4 Balances
 
-table.table.table-striped
+table.table.table-striped.balances
   tr
     th account
     th opening
@@ -23,7 +23,7 @@ table.table.table-striped
 
 h4 Transactions
 
-table.table.table-striped
+table.table.table-striped.transactions
   tr
     th purchaser
     th description
