change terminology to debits/credits

--- a/app/views/pages/root.html.slim
+++ b/app/views/pages/root.html.slim
@@ -12,21 +12,21 @@
       '
       span The account balance carried over from the last period. A positive balance means the account is in the black, i.e., nothing is owed. A negative balance means money is owed.
     li
-      strong Shares:
+      strong Debits:
       '
       span The total shared transaction costs incurred by the account during this period.
     li
-      strong Payments:
+      strong Credits:
       '
       span The total of the expenses entered into the system by this account.
     li
-      strong Oweage:
+      strong Current:
       '
-      span The total amount owed by this account. Note that this is actually the <strong>opposite</strong> of the current account balance, i.e. if an account has a positive balance of $20, the oweage is negative $20 and nothing is owed. Yes, I think this is kind of confusing, too.
+      span The total amount owed by this account.
     li
       strong Closing:
       '
-      span The account balance when the period was closed. Note that this is the <strong>opposite</strong> of the oweage amount. This will also be the opening account balance for the next period.
+      span The account balance when the period was closed. This will also be the opening account balance for the next period.
 
   h3 Entering Expenses
   p To enter an expense, click the "add" link at the top of the screen. A new transaction will be created in the current period. Select the account of the person who made the expense, and enter a description. For evenly distributed shares, enter "1" for each resident, or click the "Equal Shares" button to enter the shares automatically. You can then change the shares manually. Note that a transaction can't be changed once its period has been closed.
