--- a/app/views/periods/show.html.slim
+++ b/app/views/periods/show.html.slim
@@ -4,18 +4,18 @@ table.table.table-striped.balances
   tr
     th account
     th opening
-    th shares
-    th payments
-    th oweage
+    th debits
+    th credits
+    th current
     th closing
 
   - @summary.each do |account, balances|
     tr
       td= account.name
       td= cents_to_currency(balances[:opening])
-      td= cents_to_currency(0 - balances[:shares])
-      td= cents_to_currency(balances[:payments])
-      td= link_to balance_to_oweage(balances[:balance]), period_account_transactions_path(@period, account)
+      td= cents_to_currency(0 - balances[:debits])
+      td= cents_to_currency(balances[:credits])
+      td= link_to cents_to_currency(balances[:balance]), period_account_transactions_path(@period, account)
       td= @period.closed? ? cents_to_currency(balances[:closing]) : ''
 
 - unless @period.closed?
