--- a/app/views/transactions/index.html.slim
+++ b/app/views/transactions/index.html.slim
@@ -12,6 +12,6 @@ table.table.table-striped
     tr
       td= transaction.id
       td= link_to transaction.account.name, period_account_transactions_path(transaction.period, transaction.account)
-      td= cents_to_currency(transaction.amount_for_account(@account))
+      td= cents_to_currency(transaction.debit_for_account(@account))
       td= link_to cents_to_currency(transaction.amount), edit_period_transaction_path(transaction.period, transaction)
       td= transaction.created_at
