--- a/app/views/periods/show.html.slim
+++ b/app/views/periods/show.html.slim
@@ -17,6 +17,13 @@ table.table.table-striped.balances
       td= cents_to_currency(balances[:credits])
       td= link_to cents_to_currency(balances[:balance]), period_account_transactions_path(@period, account)
       td= @period.closed? ? cents_to_currency(balances[:closing]) : ''
+  tr
+    td TOTALS
+    td= cents_to_currency @totals[:opening]
+    td= cents_to_currency @totals[:debits]
+    td= cents_to_currency @totals[:credits]
+    td= cents_to_currency @totals[:current]
+    td= cents_to_currency @totals[:closing]
 
 - unless @period.closed?
   = button_to "Close Period", { action: "close", id: @period.id }, method: :put, class: 'btn btn-primary', data: { confirm: "Finalize and close this period?" }
