wip: update to bootstrap 3

--- a/app/assets/stylesheets/_footer.less
+++ b/app/assets/stylesheets/_footer.less
@@ -20,11 +20,11 @@ footer {
   line-height: @footerHeight;
 
   .container {
-    border-top: 1px solid @grayLighter;
+    border-top: 1px solid @gray-lighter;
   }
 
   p {
     margin: 0;
-    color: @grayLight;
+    color: @gray-light;
   }
 }
