--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,35 +8,28 @@ html
 
   body id=(controller.controller_name) class=(controller.action_name)
     .wrapper
+      .navbar.navbar-fixed-top
+        .container
+          .navbar-header
+            button.button.navbar-toggle data-toggle='collapse' data-target='.navbar-collapse'
+              span.icon-bar
+              span.icon-bar
+              span.icon-bar
+            a.navbar-brand href='/' De Haro
+          .navbar-collapse
+            ul.nav.navbar-nav
+              li= link_to 'current', current_periods_path
+              li= link_to 'add', new_transaction_path
+              li= link_to 'history', periods_path
+              li= link_to 'accounts', accounts_path
+              li= link_to 'help', "/help"
+
+      - flash.each do |name, msg|
+        = content_tag :div, raw(msg), class: "alert #{alert_class(name)}"
+
       .container
-        header.navbar.navbar-fixed-top
-          nav.navbar-inner
-            .container
-              .brand De Haro
-              ul.nav
-                li= link_to 'current', current_periods_path
-                li= link_to 'add', new_transaction_path
-                li= link_to 'history', periods_path
-                li= link_to 'accounts', accounts_path
-                li= link_to 'help', "/help"
-              /ul.nav.pull-right
-              /  - if current_user
-              /    li.dropdown
-              /      a.dropdown-toggle href='#' data-toggle='dropdown'
-              /        = current_user.email
-              /        b.caret
-              /      ul.dropdown-menu
-              /        li= link_to 'Sign Out', sign_out_path
-              /  - else
-              /    li= link_to 'Sign In', sign_in_path
-
-        - flash.each do |name, msg|
-          = content_tag :div, raw(msg), class: "alert #{alert_class(name)}"
-
         = yield
-
-      .push
-
-    footer
-      .container
-        p &copy; 2013 All rights reserved.
+        .push
+      footer
+        .container
+          p &copy; 2013 All rights reserved.
