--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,21 +8,20 @@ html
 
   body id=(controller.controller_name) class=(controller.action_name)
     .wrapper
-      .navbar.navbar-fixed-top
-        .container
-          .navbar-header
-            button.button.navbar-toggle data-toggle='collapse' data-target='.navbar-collapse'
-              span.icon-bar
-              span.icon-bar
-              span.icon-bar
-            a.navbar-brand href='/' De Haro
-          .navbar-collapse
-            ul.nav.navbar-nav
-              li= link_to 'current', current_periods_path
-              li= link_to 'add', new_transaction_path
-              li= link_to 'history', periods_path
-              li= link_to 'accounts', accounts_path
-              li= link_to 'help', "/help"
+      nav.navbar.navbar-fixed-top role='navigation'
+        .navbar-header
+          button.button.navbar-toggle data-toggle='collapse' data-target='.navbar-collapse'
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+          a.navbar-brand href='/' De Haro
+        .collapse.navbar-collapse
+          ul.nav.navbar-nav
+            li= link_to 'current', current_periods_path
+            li= link_to 'add', new_transaction_path
+            li= link_to 'history', periods_path
+            li= link_to 'accounts', accounts_path
+            li= link_to 'help', "/help"
 
       - flash.each do |name, msg|
         = content_tag :div, raw(msg), class: "alert #{alert_class(name)}"
