--- a/app/views/transactions/index.html.slim
+++ b/app/views/transactions/index.html.slim
@@ -14,6 +14,9 @@ table.table.table-striped
       td= transaction.id
       td= link_to transaction.account.name, period_account_transactions_path(transaction.period, transaction.account)
       td= transaction.description
-      td= cents_to_currency(transaction.debit_for_account(@account))
+      td
+        span= cents_to_currency(transaction.debit_for_account(@account))
+        '
+        span.muted= "(#{transaction.account_shares(@account)}/#{transaction.total_shares})"
       td= link_to cents_to_currency(transaction.amount), edit_period_transaction_path(transaction.period, transaction)
       td= transaction.created_at
