--- a/app/views/periods/show.html.slim
+++ b/app/views/periods/show.html.slim
@@ -53,5 +53,5 @@ table.table.table-striped.transactions
       td= link_to transaction.account.name, period_account_transactions_path(@period, transaction.account)
       td= transaction.description
       td= link_to cents_to_currency(transaction.amount), edit_period_transaction_path(@period, transaction)
-      td= transaction.created_at.localtime
+      td= transaction.created_at.in_time_zone
       td= transaction.id
