--- a/app/views/accounts/index.html.slim
+++ b/app/views/accounts/index.html.slim
@@ -3,7 +3,7 @@ table.table.table-striped
     th id
     th name
     th active
-    th created
+    th added
 
   - @accounts.active.order('kind DESC, name ASC').each do |account|
     tr
