add transaction presets

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -22,6 +22,7 @@ html
             li= link_to 'add', new_transaction_path
             li= link_to 'history', periods_path
             li= link_to 'accounts', accounts_path
+            li= link_to 'presets', transaction_presets_path
             li= link_to 'help', "/help"
 
       .container
