--- a/app/views/pages/root.html.slim
+++ b/app/views/pages/root.html.slim
@@ -36,3 +36,8 @@
 
   h3 Paying Rent
   p To pay rent as a resident, select the name of the resident and set False Profit's shares to 1 (or click the "Pay Rent" button to enter the shares automatically)
+
+  h3 Presets
+  p If you frequently enter a recurring transaction, you can save it as a preset. Go to the existing transaction you would like to use as a preset, and click the "Add To Presets" button. Now, the transaction will appear in the "Presets" list. To create a new transaction based on the preset, click the preset name in the "Presets" list. You can then edit the new transaction before saving.
+
+  p To remove a preset from the list, click the "Delete" button next to the transaction name in the "Presets" list (or click "Edit" to go to the original transaction and click the "Remove from Presets" button). This will never change the original transaction.
