--- a/app/views/transactions/_form.html.slim
+++ b/app/views/transactions/_form.html.slim
@@ -27,7 +27,7 @@
     label.col-sm-2.control-label Shares
     .col-sm-4
       a.btn.btn-default.shares.equalize href='#' Make Equal
-      a.btn.btn-default.shares.pay-rent href='#' Pay Rent
+      a.btn.btn-default.shares.pay-rent href='#' Pay Bank
 
   - @accounts.order('kind DESC, name ASC').each do |account|
     .form-group
