--- a/app/views/transactions/edit.html.slim
+++ b/app/views/transactions/edit.html.slim
@@ -1,1 +1,3 @@
+div data-react-class="TransactionForm" data-react-props=render(template: 'transactions/_transaction.json.jbuilder', locals: { transaction: @transaction })
+
 = render partial: 'form'
