--- a/app/views/periods/index.html.slim
+++ b/app/views/periods/index.html.slim
@@ -12,5 +12,5 @@ table.table.table-striped
       td= period.opened_at.localtime
       td= period.closed_at.try(:localtime)
 
-p= link_to 'Export Periods', periods_path(format: 'csv'), class: 'btn btn-default'
-p= link_to 'Export Transactions', transactions_path(format: 'csv'), class: 'btn btn-default'
+p= link_to 'Download Periods', periods_path(format: 'csv'), class: 'btn btn-default'
+p= link_to 'Download Transactions', transactions_path(format: 'csv'), class: 'btn btn-default'
