--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,8 +2,8 @@ doctype 5
 html
   head
     title = ENV['DE_HARO_TITLE'] || 'De Haro'
-    = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
-    = javascript_include_tag 'application', 'data-turbolinks-track' => true
+    = stylesheet_link_tag    'application', media: 'all'
+    = javascript_include_tag 'application'
     = csrf_meta_tag
     meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
 
@@ -28,6 +28,7 @@ html
       .container
         - flash.each do |name, msg|
           = content_tag :div, raw(msg), class: "alert #{alert_class(name)}"
+        #react-app
         = yield
         .push
       footer
