update form when transaction is clicked

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,7 +3,7 @@
 @import '_navbar';
 @import '_transactions';
 
-#transactions {
+#transactions, #transactions-react {
   .btn {
     margin-right: 10px;
   }
