--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -24,6 +24,7 @@ html
             li= link_to 'accounts', accounts_path
             li= link_to 'presets', transaction_presets_path
             li= link_to 'help', "/help"
+            li= link_to 'react', "/app"
 
       .container
         - flash.each do |name, msg|
